--- a/package.json
+++ b/package.json
@@ -6,11 +6,13 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
+    "argon2": "^0.40.1",
     "better-sqlite3": "^9.4.3",
     "drizzle-orm": "^0.30.1",
     "express": "^4.18.3",
     "express-async-errors": "^3.1.1",
-    "express-validator": "^7.0.1"
+    "express-validator": "^7.0.1",
+    "jose": "^5.2.3"
   },
   "devDependencies": {
     "@types/better-sqlite3": "^7.6.9",
